[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/ui/menu_button_notpressed.png" type="Texture" id=1]
[ext_resource path="res://art/ui/menu_button_pressed.png" type="Texture" id=2]
[ext_resource path="res://art/ui/menu_button_selected.png" type="Texture" id=3]
[ext_resource path="res://scenes/UI/BaseButton.gd" type="Script" id=4]
[ext_resource path="res://art/sounds/6_1_Menu_button.wav" type="AudioStream" id=5]
[ext_resource path="res://art/sounds/1_1_Zaba_skok.wav" type="AudioStream" id=6]

[node name="BaseButton" type="TextureButton"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 3 )
script = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="hoverSound" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="clickSound" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="mouse_entered" from="." to="." method="_on_BaseButton_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_BaseButton_mouse_exited"]

[connection signal="pressed" from="." to="." method="_on_BaseButton_pressed"]


